# fast-spatial-join

./: .gitignore  Cargo.toml  README.md
src/: cli_utils.rs  file_processor.rs  geo_index_utils.rs  main.rs  mod.rs
src/geo_finder/: geo_finder_types.rs  mod.rs  polygon_finder.rs
src/geo_finder/test_resources/: malformed_geojson.json  mexico_states.json  mexico_states_with_point.json  one_feature_geojson.json  zip_codes_colima.json
test-data/: mx-atms.txt  mx-states.json
