[package]
name = "fast-spatial-join"
version = "0.1.0"
authors = ["Gustavo Ajzenman <gustavoajz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
geojson = { version =  "0.16.0", features=["geo-types"] }
geo = { version = "0.12.2", features=["serde"] }
geo-types = { version = "0.4.3", features=["serde"] }
spade = { version = "1.8.0", features=["serde_serialize"] }
cgmath = { version = "0.17.0", features=["serde"] }
num-traits = "0.2"
serde_json = "1.0.40"
serde = "1.0.98"
bincode = "1.1.4"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
simplelog = "0.6"
csv = "1.1.1"
chrono = "0.4.7"
ascii = "1.0"

[dev-dependencies]
assert_matches = "1.3"